--- a/index.html
+++ b/index.html
@@ -133,21 +133,21 @@
             <div class="storeIn4__icon">
               <img src="../img/wall-clock-icon.svg" alt="icon" />
             </div>
-            <h3 class="storeIn4__title">10 AM - 7 PM</h3>
+            <h3 src="#" class="storeIn4__title">10 AM - 7 PM</h3>
             <p class="storeIn4__text">Giờ mở cửa</p>
           </div>
           <div class="storeIn4__item">
             <div class="storeIn4__icon">
               <img src="../img/address-icon.svg" alt="icon" />
             </div>
-            <h3 class="storeIn4__title">Ha Dong, Ha Noi</h3>
+            <h3 src="#" class="storeIn4__title">Ha Dong, Ha Noi</h3>
             <p class="storeIn4__text">Địa chỉ</p>
           </div>
           <div class="storeIn4__item">
             <div class="storeIn4__icon">
               <img src="../img/phone-icon.svg" alt="icon" />
             </div>
-            <h3 class="storeIn4__title">0981 458 371</h3>
+            <h3 src="#" class="storeIn4__title">0981 458 371</h3>
             <p class="storeIn4__text">Gọi ngay</p>
           </div>
         </div>
@@ -166,17 +166,14 @@
               <h2 class="ourSpecials__item__title">
                 Cơm trộn Hàn Quốc Bibimbap
               </h2>
-              <h3 class="ourSpecials__item__price">200000đ</h3>
+              <h3 src="#" class="ourSpecials__item__price">200.000đ/suất</h3>
               <div class="ourSpecials__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
               <p class="ourSpecials__item_text">
                 Chắc hẳn không một bạn trẻ nào lại không biết đến món ăn Hàn
                 Quốc quốc dân này. Bibimbap là món cơm trộn kết hợp với nhiều
-                nguyên liệu đầy màu sắc như: màu trắng của cơm, màu vàng của
-                trứng, màu đỏ của kim chi, màu cam của cà rốt, màu đen của rong
-                biển… Tất cả sẽ được trộn đều với nước sốt làm từ ớt trước khi
-                ăn tạo nên một hương vị ngon khó cưỡng.
+                nguyên liệu đầy màu sắc như: màu trắng của cơm,...
               </p>
             </div>
             <div class="ourSpecials__item">
@@ -186,7 +183,7 @@
               <h2 class="ourSpecials__item__title">
                 Kimbap - Món nổi tiếng Hàn Quốc
               </h2>
-              <h3 class="ourSpecials__item__price">180000đ</h3>
+              <h3 src="#" class="ourSpecials__item__price">180.000đ/suất</h3>
               <div class="ourSpecials__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -194,10 +191,7 @@
                 Đây được xem là món ăn Hàn Quốc quen thuộc của các tín đồ đam mê
                 ẩm thực Hàn. Nguyên liệu chính của Kimbap là rong biển và cơm
                 trắng, sau đó sẽ thêm rau xào, thịt bò, trứng chiên, xúc
-                xích,... rồi cuộn lại bên trong lá rong biển và cắt thành từng
-                khoanh tròn vừa ăn. Món ăn này trông có vẻ đơn giản nhưng lại
-                bắt miệng đến lạ, đó cũng là lý do khiến Kimbap trở thành một
-                trong những món ăn đặc trưng của xứ Hàn.
+                xích,...
               </p>
             </div>
           </div>
@@ -224,8 +218,8 @@
               <img src="../img/canhbo.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Canh Bò</h3>
-              <h3 class="dishGrid_item_price">200000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Canh Bò</h3>
+              <h3 src="#" class="dishGrid_item_price">200.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -236,8 +230,8 @@
               <img src="../img/mylanh.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Mỳ Lạnh</h3>
-              <h3 class="dishGrid_item_price">50000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Mỳ Lạnh</h3>
+              <h3 src="#" class="dishGrid_item_price">50.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -248,8 +242,8 @@
               <img src="../img/tokbokki.jpg" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Tokbokki</h3>
-              <h3 class="dishGrid_item_price">60000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Tokbokki</h3>
+              <h3 src="#" class="dishGrid_item_price">60.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3star" />
               </div>
@@ -275,11 +269,11 @@
             </div>
           </div>
           <div class="discount__info">
-            <h3 class="discount__text">20% OFF</h3>
-            <h3 class="discount__title">Khuyến Mại Đặc Biệt</h3>
-            <h3 class="discount__price">
-              <span class="discount__oldPrice">230000đ</span>
-              <span class="discount__newPrice">184000đ</span>
+            <h3 src="#" class="discount__text">20% OFF</h3>
+            <h3 src="#" class="discount__title">Khuyến Mại Đặc Biệt</h3>
+            <h3 src="#" class="discount__price">
+              <span class="discount__oldPrice">230.000đ/suất</span>
+              <span class="discount__newPrice">184.000đ/suất</span>
             </h3>
             <div class="discount__stars">
               <img src="../img/3star.svg" alt="3star" />
@@ -415,7 +409,7 @@
                 <img src="../img/banbe.jpg" alt="" />
               </div>
               <div class="testimonial__item__info">
-                <h3 class="testimonial__item__name">Chị Hà</h3>
+                <h3 src="#" class="testimonial__item__name">Chị Hà</h3>
                 <div class="testimonial__item__stars">
                   <img src="../img/3star.svg" alt="3 star" />
                 </div>
@@ -431,7 +425,7 @@
                 <img src="../img/aa.jpg" alt="" />
               </div>
               <div class="testimonial__item__info">
-                <h3 class="testimonial__item__name">Anh An</h3>
+                <h3 src="#" class="testimonial__item__name">Anh An</h3>
                 <div class="testimonial__item__stars">
                   <img src="../img/3star.svg" alt="3 star" />
                 </div>
@@ -447,7 +441,7 @@
                 <img src="../img/giadinh.jpg" alt="" />
               </div>
               <div class="testimonial__item__info">
-                <h3 class="testimonial__item__name">Gia đình bé Tom</h3>
+                <h3 src="#" class="testimonial__item__name">Gia đình bé Tom</h3>
                 <div class="testimonial__item__stars">
                   <img src="../img/3star.svg" alt="3 star" />
                 </div>
@@ -455,8 +449,7 @@
                   “Một sự chào đón nồng nhiệt và thân thiện với dịch vụ khách
                   hàng tuyệt vời. Luôn luôn tuyệt vời, thức ăn ngon được phục vụ
                   nóng hổi - đúng như cách chúng tôi yêu thích. Chắc chắn chúng
-                  tôi sẽ giới thiệu cho bạn bè. Chúng tôi đã đến đây nhiều lần
-                  và nó luôn trên sự kỳ vọng của chúng tôi"
+                  tôi sẽ giới thiệu cho bạn bè."
                 </p>
               </div>
             </div>
@@ -465,7 +458,7 @@
                 <img src="../img/ngan.jpg" alt="" />
               </div>
               <div class="testimonial__item__info">
-                <h3 class="testimonial__item__name">Bà Ngân</h3>
+                <h3 src="#" class="testimonial__item__name">Bà Ngân</h3>
                 <div class="testimonial__item__stars">
                   <img src="../img/3star.svg" alt="3 star" />
                 </div>
@@ -487,7 +480,7 @@
       <div class="container">
         <div class="newsletter__wrapper">
           <div class="newsletter__info">
-            <h3 class="newsletter__title">Đăng ký nhận thông báo</h3>
+            <h3 src="#" class="newsletter__title">Đăng ký nhận thông báo</h3>
             <p class="newsletter__text">
               Nhận thông báo mới nhất từ chúng tôi về ưu đãi và sản phẩm
             </p>
@@ -583,7 +576,7 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Trang</h3>
+            <h3 src="#" class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
                 <a href="./index.html">Trang chủ</a>
@@ -603,7 +596,7 @@
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Hỗ Trợ</h3>
+            <h3 src="#" class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
                 <a href="../pages/contact.html">Trang chủ</a>
@@ -617,7 +610,7 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Liên hệ</h3>
+            <h3 src="#" class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
                 <a href="tel:0981 458 371">0981 458 371</a>
