--- a/pages/about.html
+++ b/pages/about.html
@@ -106,7 +106,7 @@
             <img src="../img/ourStoryImg.png" alt="#" />
           </div>
           <div class="ourStory__info">
-            <h3 class="ourStory__title">Câu chuyện của chúng tôi</h3>
+            <h3 src="#" class="ourStory__title">Câu chuyện của chúng tôi</h3>
             <p class="ourStory__subtitle">Bắt đầu từ năm 2022</p>
             <p class="ourStory__text">
               Chào mừng đến với K-Food. Chúng tôi tự hào cung cấp dịch vụ ấm áp,
@@ -131,7 +131,7 @@
     <section id="ourGoals" data-aos="fade-down">
       <div class="container">
         <div class="ourGoals__info">
-          <h3 class="ourGoals__title">Mục tiêu hướng tới</h3>
+          <h3 src="#" class="ourGoals__title">Mục tiêu hướng tới</h3>
           <p class="ourGoals__text">
             Chúng tôi sẽ bán những món ăn và đồ uống ngon và nổi bật, đáp ứng
             các tiêu chí về chất lượng, độ tươi và tính thời vụ cao nhất đồng
@@ -235,7 +235,7 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Trang</h3>
+            <h3 src="#" class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
                 <a href="./index.html">Trang chủ</a>
@@ -255,7 +255,7 @@
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Hỗ Trợ</h3>
+            <h3 src="#" class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
                 <a href="../pages/contact.html">Trang chủ</a>
@@ -269,7 +269,7 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Liên hệ</h3>
+            <h3 src="#" class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
                 <a href="tel:0981 458 371">0981 458 371</a>
