--- a/pages/booking.html
+++ b/pages/booking.html
@@ -132,7 +132,7 @@
     <!-- Booking Section -->
     <section id="form" data-aos="fade-up">
       <div class="container">
-        <h3 class="form__title">Đặt Bàn</h3>
+        <h3 src="#" class="form__title">Đặt Bàn</h3>
         <div class="form__wrapper">
           <form name="booking" method="POST" netlify>
             <div class="form__group">
@@ -155,9 +155,9 @@
               <label for="tableType">Loại Bàn</label>
               <select name="Loại Bàn" id="tableType" required>
                 <option selected disabled>Chọn</option>
-                <option value="small">Nhỏ (2 người)</option>
-                <option value="medium">Trung bình (4 người)</option>
-                <option value="large">Lớn(6-8 người)</option>
+                <option value="nhỏ">Nhỏ (2 người)</option>
+                <option value="trung bình">Trung bình (4 người)</option>
+                <option value="lớn">Lớn(6-8 người)</option>
               </select>
             </div>
             <div class="form__group">
@@ -175,18 +175,18 @@
               <label for="placement">Tầng</label>
               <select name="Placement" id="placement">
                 <option selected disabled>Chọn</option>
-                <option value="outdoor">Tầng 1</option>
-                <option value="indoor">Tầng 2</option>
-                <option value="rooftop">Tầng 3</option>
+                <option value="tầng 1">Tầng 1</option>
+                <option value="tầng 2">Tầng 2</option>
+                <option value="tầng 3">Tầng 3</option>
               </select>
             </div>
             <div class="form__group">
               <label for="date">Ngày</label>
-              <input type="date" id="date" name="Date" required />
+              <input type="date" id="date" name="Ngày" required />
             </div>
             <div class="form__group">
               <label for="time">Giờ</label>
-              <input type="time" id="time" name="Time" required />
+              <input type="time" id="time" name="Giờ" required />
             </div>
             <div class="form__group form__group__full">
               <label for="note">Ghi chú</label>
@@ -276,7 +276,7 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Trang</h3>
+            <h3 src="#" class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
                 <a href="./index.html">Trang chủ</a>
@@ -296,7 +296,7 @@
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Hỗ Trợ</h3>
+            <h3 src="#" class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
                 <a href="../pages/contact.html">Trang chủ</a>
@@ -310,7 +310,7 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Liên hệ</h3>
+            <h3 src="#" class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
                 <a href="tel:0981 458 371">0981 458 371</a>
