--- a/pages/contact.html
+++ b/pages/contact.html
@@ -138,21 +138,21 @@
             <div class="storeIn4__icon">
               <img src="../img/wall-clock-icon.svg" alt="icon" />
             </div>
-            <h3 class="storeIn4__title">10 AM - 7 PM</h3>
+            <h3 src="#" class="storeIn4__title">10 AM - 7 PM</h3>
             <p class="storeIn4__text">Giờ mở cửa</p>
           </div>
           <div class="storeIn4__item">
             <div class="storeIn4__icon">
               <img src="../img/address-icon.svg" alt="icon" />
             </div>
-            <h3 class="storeIn4__title">Ha Dong, Ha Noi</h3>
+            <h3 src="#" class="storeIn4__title">Ha Dong, Ha Noi</h3>
             <p class="storeIn4__text">Địa chỉ</p>
           </div>
           <div class="storeIn4__item">
             <div class="storeIn4__icon">
               <img src="../img/phone-icon.svg" alt="icon" />
             </div>
-            <h3 class="storeIn4__title">0981 458 371</h3>
+            <h3 src="#" class="storeIn4__title">0981 458 371</h3>
             <p class="storeIn4__text">Gọi ngay</p>
           </div>
         </div>
@@ -162,7 +162,7 @@
     <!--Liên hệ Form Section-->
     <section id="form">
       <div class="container">
-        <h3 class="form__title">Liên hệ</h3>
+        <h3 src="#" class="form__title">Liên hệ</h3>
         <div class="form__wrapper">
           <form name="contactform" method="POST" netlify>
             <div class="form__group">
@@ -301,7 +301,7 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Trang</h3>
+            <h3 src="#" class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
                 <a href="../index.html">Trang chủ</a>
@@ -321,7 +321,7 @@
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Hỗ Trợ</h3>
+            <h3 src="#" class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
                 <a href="../pages/contact.html">Trang chủ</a>
@@ -335,7 +335,7 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Liên hệ</h3>
+            <h3 src="#" class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
                 <a href="tel:0981 458 371">0981 458 371</a>
