--- a/pages/menu.html
+++ b/pages/menu.html
@@ -107,17 +107,17 @@
     <!-- Our specicals section-->
     <section id="ourSpecicals">
       <div class="container">
-        <h3 class="ourSpecicals__tittle">Món Ăn Đặc Sắc</h3>
+        <h3 src="#" class="ourSpecicals__tittle">Món Ăn Đặc Sắc</h3>
         <div class="ourSpecicals__wrapper">
           <div class="ourSpecicals__item">
             <div class="ourSpecicals__item__img">
               <img src="../img/kimpap.png" alt="food" />
             </div>
             <div class="ourSpecicals__item__info">
-              <h3 class="ourSpecicals__item__tittle">
+              <h3 src="#" class="ourSpecicals__item__tittle">
                 Kimbap - Món nổi tiếng Hàn Quốc
               </h3>
-              <h4 class="ourSpecicals__item__price">180000đ</h4>
+              <h4 class="ourSpecicals__item__price">180.000đ/suất</h4>
               <div class="ourSpecicals__item__stars">
                 <img src="../img/3star.svg" alt="stars" />
               </div>
@@ -128,10 +128,10 @@
               <img src="../img/Comtronbibimbap.png" alt="food" />
             </div>
             <div class="ourSpecicals__item__info">
-              <h3 class="ourSpecicals__item__tittle">
+              <h3 src="#" class="ourSpecicals__item__tittle">
                 Cơm trộn Hàn Quốc Bibimbap
               </h3>
-              <h4 class="ourSpecicals__item__price">200000đ</h4>
+              <h4 class="ourSpecicals__item__price">200.000đ/suất</h4>
               <div class="ourSpecicals__item__stars">
                 <img src="../img/3star.svg" alt="stars" />
               </div>
@@ -151,8 +151,8 @@
               <img src="../img/canhbo.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Canh bò</h3>
-              <h3 class="dishGrid__item__price">200000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Canh bò</h3>
+              <h3 src="#" class="dishGrid__item__price">200.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -163,8 +163,8 @@
               <img src="../img/mylanh.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Mỳ Lạnh</h3>
-              <h3 class="dishGrid__item__price">50000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Mỳ Lạnh</h3>
+              <h3 src="#" class="dishGrid__item__price">50.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -175,8 +175,8 @@
               <img src="../img/tokbokki.jpg" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Tokbokki</h3>
-              <h3 class="dishGrid__item__price">50000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Tokbokki</h3>
+              <h3 src="#" class="dishGrid__item__price">50.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -196,8 +196,8 @@
               <img src="../img/chao.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Cháo gà DakJuk</h3>
-              <h3 class="dishGrid__item__price">160000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Cháo gà DakJuk</h3>
+              <h3 src="#" class="dishGrid__item__price">160.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -208,8 +208,8 @@
               <img src="../img/kimchi.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Bánh KimChi</h3>
-              <h3 class="dishGrid__item__price">60000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Bánh KimChi</h3>
+              <h3 src="#" class="dishGrid__item__price">60.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -220,8 +220,8 @@
               <img src="../img/hotdog.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Hot Dog</h3>
-              <h3 class="dishGrid__item__price">60000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Hot Dog</h3>
+              <h3 src="#" class="dishGrid__item__price">60.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -232,8 +232,8 @@
               <img src="../img/hottoek.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Bánh PanCake</h3>
-              <h3 class="dishGrid__item__price">90000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Bánh PanCake</h3>
+              <h3 src="#" class="dishGrid__item__price">90.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -244,8 +244,8 @@
               <img src="../img/mijang.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Mỳ Jajangmyeon</h3>
-              <h3 class="dishGrid__item__price">180000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Mỳ Jajangmyeon</h3>
+              <h3 src="#" class="dishGrid__item__price">180.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -265,8 +265,8 @@
               <img src="../img/gacay.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Gà rán sốt cay</h3>
-              <h3 class="dishGrid__item__price">180000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Gà rán sốt cay</h3>
+              <h3 src="#" class="dishGrid__item__price">180.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -277,8 +277,8 @@
               <img src="../img/gacayphomai.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Gà sốt Phomai</h3>
-              <h3 class="dishGrid__item__price">180000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Gà sốt Phomai</h3>
+              <h3 src="#" class="dishGrid__item__price">180.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -289,8 +289,8 @@
               <img src="../img/mienchien.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Miến cuộn</h3>
-              <h3 class="dishGrid__item__price">50000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Miến cuộn</h3>
+              <h3 src="#" class="dishGrid__item__price">50.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -301,8 +301,8 @@
               <img src="../img/suonnuong.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Sườn nướng</h3>
-              <h3 class="dishGrid__item__price">180000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Sườn nướng</h3>
+              <h3 src="#" class="dishGrid__item__price">180.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -313,8 +313,8 @@
               <img src="../img/canhkhoaiham.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Canh khoai tây</h3>
-              <h3 class="dishGrid__item__price">180000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Canh khoai tây</h3>
+              <h3 src="#" class="dishGrid__item__price">180.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -334,8 +334,8 @@
               <img src="../img/canhgaham.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Canh gà hầm</h3>
-              <h3 class="dishGrid__item__price">180000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Canh gà hầm</h3>
+              <h3 src="#" class="dishGrid__item__price">180.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -346,8 +346,8 @@
               <img src="../img/canhdaukho.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Canh đậu tương</h3>
-              <h3 class="dishGrid__item__price">180000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Canh đậu tương</h3>
+              <h3 src="#" class="dishGrid__item__price">180.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -358,8 +358,8 @@
               <img src="../img/supdauphukho.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Súp đậu kho</h3>
-              <h3 class="dishGrid__item__price">180000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Súp đậu kho</h3>
+              <h3 src="#" class="dishGrid__item__price">180.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -370,8 +370,8 @@
               <img src="../img/canhbo.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Canh bò</h3>
-              <h3 class="dishGrid__item__price">200000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Canh bò</h3>
+              <h3 src="#" class="dishGrid__item__price">200.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -382,8 +382,8 @@
               <img src="../img/cua.png" alt="food img" />
             </div>
             <div class="dishGrid__item__info">
-              <h3 class="dishGrid__item__title">Cua ngâm tương</h3>
-              <h3 class="dishGrid__item__price">170000đ</h3>
+              <h3 src="#" class="dishGrid__item__title">Cua ngâm tương</h3>
+              <h3 src="#" class="dishGrid__item__price">170.000đ/suất</h3>
               <div class="dishGrid__item__stars">
                 <img src="../img/3star.svg" alt="3 star" />
               </div>
@@ -471,7 +471,7 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Trang</h3>
+            <h3 src="#" class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
                 <a href="./index.html">Trang chủ</a>
@@ -491,7 +491,7 @@
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Hỗ Trợ</h3>
+            <h3 src="#" class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
                 <a href="../pages/contact.html">Trang chủ</a>
@@ -505,7 +505,7 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Liên hệ</h3>
+            <h3 src="#" class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
                 <a href="tel:0981 458 371">0981 458 371</a>
